mathutils.Vector - incorrect error message for bad type assignments #38402

Closed
opened 2014-01-30 00:06:33 +01:00 by CodeManX · 7 comments
Member

The following code:

from mathutils import Vector
vector_a = Vector((0, 1, 2))

vector_a[0] = "Hello World"

incorrectly reports a wrong type for the index:

TypeError: vector[index] = x: index argument not a number

but it's actually the value that is wrong.

If you try a proper value, but bad type as index, the following error is reported (correct):

vector_a[...] = 123
TypeError: vector indices must be integers, not ellipsis
The following code: ``` from mathutils import Vector vector_a = Vector((0, 1, 2)) vector_a[0] = "Hello World" ``` incorrectly reports a wrong type for the index: ``` TypeError: vector[index] = x: index argument not a number ``` but it's actually the value that is wrong. If you try a proper value, but bad type as index, the following error is reported (correct): ``` vector_a[...] = 123 ``` ``` TypeError: vector indices must be integers, not ellipsis
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @CodeManX

Added subscriber: @CodeManX

Added subscriber: @AngusHollands-4

Added subscriber: @AngusHollands-4

This issue was referenced by blender/blender-addons-contrib@bd697dd4d7

This issue was referenced by blender/blender-addons-contrib@bd697dd4d7e3b753aa18a1767e20c80d52f65aa4

This issue was referenced by blender/blender@bd697dd4d7

This issue was referenced by blender/blender@bd697dd4d7e3b753aa18a1767e20c80d52f65aa4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@bd697dd4d7.

Closed by commit blender/blender@bd697dd4d7.
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#38402
No description provided.