Fix T38402: invalid message for bad type assignments (Quat, Vector)